<resources>
    <string name="app_name">MaraudersMap</string>

    <!-- Login & Register Activity -->
    <string name="loginHeader_text">Login</string>
    <string name="usernameHint_text">username</string>
    <string name="passwordHint_text">password</string>
    <string name="loginButton_text">Login</string>
    <string name="doNotHaveAnAccount_text">Don\'t have an Account ?</string>
    <string name="registerLink_text">Register</string>
    <string name="registerHeader_text">Register</string>
    <string name="registerButton_text">Register</string>
    <string name="alreadyHaveAnAccount_text">Already have an Account ?</string>
    <string name="loginLink_text">Login</string>
    <string name="confirmPasswordHint_text">confirm password</string>

    <string name="settings_btn">Settings</string>
    <string name="invalidUsername_text">Username is invalid</string>
    <string name="invalidPassword_text">Password is invalid</string>
    <string name="successfulLogin">Login successful</string>
    <string name="failedLogin_text">Login failed</string>
    <string name="unknownError_text">Unknown error</string>
    <string name="error_text">Error</string>
    <string name="userAlreadyExists_text">User already exists</string>
    <string name="successfulRegistration_text">Registration successful</string>
    <string name="confirmPassword_text">Confirm password</string>
    <string name="passwordsDoNotMatch_text">Passwords do not match!</string>
    <string name="login_label">Login</string>
    <string name="register_label">Register</string>

    <!-- Settings Activity -->
    <string name="automaticSendingOfPosition_text">Auto sending</string>
    <string name="interval_text">Interval</string>
    <string name="successfulModification_text">Server info modified</string>
    <string name="notModified_text">Modification failed</string>
    <string name="privacyRadius_text">Privacy radius</string>
    <string name="savedRadius_text">Saved new radius</string>
    <string name="savedInterval_text">Saved new interval</string>
    <string name="deleteAccount_buttonText">Delete Account</string>
    <string name="position_headerText">Position</string>
    <string name="visibility_headerText">Visibility</string>
    <string name="account_headerText">Account</string>
    <string name="interval_hintText">…seconds</string>
    <string name="newPassword_hintText">new password</string>
    <string name="changePassword_text">Change Password</string>
    <string name="settings_label">Settings</string>
    <string name="changeDescription_hintText">description…</string>
    <string name="description_text">Description</string>
    <string name="cancelSetting_text">Cancel</string>
    <string name="saveSetting_text">Save</string>
    <string name="descriptionSetting_headerText">Description</string>
    <string name="radius_text">Radius</string>
    <string name="radius_hintText">km</string>
    <string name="deleteAccount_headerText">Delete Account!</string>
    <string name="deleteAccount_messageText">Do you really want to delete this account?</string>
    <string name="yes_dialogText">Yes</string>
    <string name="no_dialogText">No</string>
    <string name="saveChanges_headerText">Save Changes</string>
    <string name="saveChanges_messageText">Do you want to save all changes?</string>
    <string name="currentDescription_headerText">Current Description</string>
    <string name="close_dialogText">Close</string>
    <string name="saved_messageText">Saved!</string>
    <string name="notModifiedPrivacyRadius_text">No changes were made to privacy radius</string>
    <string name="notModifiedPassword_text">No changes were made to password</string>
    <string name="notModifiedDescription_text">No changes were made to description</string>
    <string name="permissionDenied_text">Permission denied</string>
    <string name="passwordChanged_text">Password changed</string>
    <string name="privacyRadiusChanged_text">Privacy radius changed</string>
    <string name="descriptionChanged_text">Description changed</string>
    <string name="deletedUser_text">User deleted</string>

    <!-- Map Activity -->
    <string name="displayUser_text">Displayed Users: %d</string>


    <!-- Connection related Strings -->
    <string name="noInternetConnection_text">No internet connection</string>
    <string name="noServerConnection_text">Server not reachable</string>
    <string name="log_out_menu_text">Log out</string>
    <string name="center_btn">Center</string>
    <string name="number_tV">Displayed Users: 0</string>

</resources>